# openfang

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  MIGRATION.md  README.md  SECURITY.md  docker-compose.yml  flake.nix  openparlant.toml.example
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
agents/analyst/: agent.toml
agents/architect/: agent.toml
agents/assistant/: agent.toml
agents/code-reviewer/: agent.toml
agents/coder/: agent.toml
agents/customer-support/: agent.toml
agents/data-scientist/: agent.toml
agents/debugger/: agent.toml
agents/devops-lead/: agent.toml
agents/doc-writer/: agent.toml
agents/email-assistant/: agent.toml
agents/health-tracker/: agent.toml
agents/hello-world/: agent.toml
agents/home-automation/: agent.toml
agents/legal-assistant/: agent.toml
agents/meeting-assistant/: agent.toml
agents/ops/: agent.toml
agents/orchestrator/: agent.toml
agents/personal-finance/: agent.toml
agents/planner/: agent.toml
agents/recruiter/: agent.toml
agents/researcher/: agent.toml
agents/sales-assistant/: agent.toml
agents/security-auditor/: agent.toml
agents/social-media/: agent.toml
crates/openparlant-api/: Cargo.toml  build.rs
crates/openparlant-api/src/: channel_bridge.rs  compat_routes.rs  control_routes.rs  dashboard_routes.rs  lib.rs  middleware.rs  notification_routes.rs  openai_compat.rs  routes.rs  server.rs  types.rs  webchat.rs  ws.rs
crates/openparlant-api/static/: index_body.html  index_head.html  manifest.json  sw.js
crates/openparlant-api/static/css/: components.css  layout.css  theme.css
crates/openparlant-api/static/js/: api.js  app.js  katex.js
crates/openparlant-api/static/js/pages/: agents.js  approvals.js  channels.js  chat.js  comms.js  control-journey-builder.js  control.js  hands.js  logs.js  overview.js  runtime.js  scheduler.js  sessions.js  settings.js  skills.js  usage.js  wizard.js  workflow-builder.js  workflows.js
crates/openparlant-api/tests/: api_integration_test.rs  daemon_lifecycle_test.rs  load_test.rs  postgres_control_plane_test.rs
crates/openparlant-cli/: Cargo.toml
crates/openparlant-cli/src/: bundled_agents.rs  dotenv.rs  launcher.rs  main.rs  mcp.rs  templates.rs  ui.rs
crates/openparlant-cli/src/tui/: chat_runner.rs  event.rs  mod.rs  theme.rs
crates/openparlant-cli/src/tui/screens/: agents.rs  audit.rs  chat.rs  comms.rs  dashboard.rs  extensions.rs  hands.rs  init_wizard.rs  logs.rs  memory.rs  peers.rs  sessions.rs  settings.rs  skills.rs  templates.rs  triggers.rs  usage.rs  welcome.rs  wizard.rs  workflows.rs
crates/openparlant-context/: Cargo.toml
crates/openparlant-context/src/: lib.rs  store.rs
crates/openparlant-control/: Cargo.toml
crates/openparlant-control/src/: dashboard.rs  lib.rs  notifications.rs  plaza.rs  store.rs
crates/openparlant-desktop/: Cargo.toml  tauri.conf.json
crates/openparlant-desktop/capabilities/: default.json
crates/openparlant-desktop/src/: commands.rs  lib.rs  main.rs  server.rs  shortcuts.rs  tray.rs  updater.rs
crates/openparlant-hands/: Cargo.toml
crates/openparlant-hands/bundled/browser/: SKILL.md
crates/openparlant-hands/bundled/trader/: SKILL.md
crates/openparlant-hands/bundled/twitter/: HAND.toml
crates/openparlant-hands/src/: lib.rs  registry.rs
crates/openparlant-journey/: Cargo.toml
crates/openparlant-journey/src/: lib.rs  store.rs
crates/openparlant-kernel/: Cargo.toml
crates/openparlant-kernel/src/: approval.rs  auth.rs  auto_reply.rs  background.rs  capabilities.rs  config.rs  config_reload.rs  cron.rs  error.rs  event_bus.rs  heartbeat.rs  kernel.rs  lib.rs  metering.rs  pairing.rs  registry.rs  scheduler.rs  supervisor.rs  triggers.rs  whatsapp_gateway.rs  wizard.rs  workflow.rs
crates/openparlant-kernel/tests/: integration_test.rs  multi_agent_test.rs  wasm_agent_integration_test.rs  workflow_integration_test.rs
crates/openparlant-memory/: Cargo.toml
crates/openparlant-memory/src/: consolidation.rs  db.rs  knowledge.rs  lib.rs  migration.rs  semantic.rs  session.rs  structured.rs  substrate.rs  usage.rs
crates/openparlant-policy/: Cargo.toml
crates/openparlant-policy/src/: lib.rs  store.rs
crates/openparlant-runtime/: Cargo.toml
crates/openparlant-runtime/src/: a2a.rs  agent_loop.rs  apply_patch.rs  audit.rs  auth_cooldown.rs  browser.rs  compactor.rs  context_budget.rs  context_overflow.rs  docker_sandbox.rs  embedding.rs  graceful_shutdown.rs  hooks.rs  host_functions.rs  image_gen.rs  kernel_handle.rs  lib.rs  link_understanding.rs  llm_driver.rs  llm_errors.rs  mcp.rs  mcp_server.rs  media_understanding.rs  model_catalog.rs  prompt_builder.rs  python_runtime.rs  retry.rs  routing.rs  sandbox.rs  session_repair.rs  subprocess_sandbox.rs  tool_runner.rs  tts.rs  web_fetch.rs  web_search.rs  workspace_context.rs
crates/openparlant-runtime/src/drivers/: anthropic.rs  claude_code.rs  copilot.rs  fallback.rs  gemini.rs  mod.rs  openai.rs  qwen_code.rs
crates/openparlant-skills/: Cargo.toml
crates/openparlant-skills/src/: bundled.rs  clawhub.rs  lib.rs  marketplace.rs  openclaw_compat.rs  registry.rs
crates/openparlant-wire/: Cargo.toml
crates/openparlant-wire/src/: lib.rs  message.rs  peer.rs
deploy/: openfang.service
design/: Original requirements.md  Path to implementation.md  Preliminary ideation.md  基于OpenFang改造的企业级多Agent底座-可动工设计-v2.md  基于OpenFang改造的企业级多Agent底座-可动工设计-v3.md  建议.md  现状.md
docs/: README.md  agent-templates.md  agent-vless-reality-steal-oneself.md  api-reference.md  architecture.md  channel-adapters.md  cli-reference.md  configuration.md  desktop.md  getting-started.md  launch-roadmap.md  mcp-a2a.md  production-checklist.md  providers.md  security.md  skill-development.md  troubleshooting.md  vless-reality-steal-oneself.md  workflows.md  基于OpenFang改造的企业级多Agent底座-可动工设计-v2.md  基于OpenFang改造的企业级多Agent底座-可动工设计-v3.md  建议.md
frontend/: index.html
scripts/: install.ps1  install.sh
xtask/: Cargo.toml
xtask/src/: main.rs
(+179 files in other folders)
