[package]
name = "openparlant-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP/WebSocket API server for the OpenParlant Agent OS daemon"
build = "build.rs"

[dependencies]
openparlant-types = { path = "../openparlant-types" }
openparlant-kernel = { path = "../openparlant-kernel" }
openparlant-runtime = { path = "../openparlant-runtime" }
openparlant-memory = { path = "../openparlant-memory" }
openparlant-channels = { path = "../openparlant-channels" }
openparlant-wire = { path = "../openparlant-wire" }
openparlant-skills = { path = "../openparlant-skills" }
openparlant-hands = { path = "../openparlant-hands" }
openparlant-extensions = { path = "../openparlant-extensions" }
openparlant-migrate = { path = "../openparlant-migrate" }
openparlant-control = { path = "../openparlant-control" }
openparlant-policy = { path = "../openparlant-policy" }
openparlant-journey = { path = "../openparlant-journey" }
openparlant-context = { path = "../openparlant-context" }
rusqlite = { workspace = true }
sqlx = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
tokio-stream = { workspace = true }
subtle = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
socket2 = { workspace = true }
reqwest = { workspace = true }
include_dir = "0.7"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
