[package]
name = "silicrew-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP/WebSocket API server for the OpenParlant Agent OS daemon"
build = "build.rs"

[dependencies]
silicrew-types = { path = "../silicrew-types" }
silicrew-kernel = { path = "../silicrew-kernel" }
silicrew-runtime = { path = "../silicrew-runtime" }
silicrew-memory = { path = "../silicrew-memory" }
silicrew-channels = { path = "../silicrew-channels" }
silicrew-wire = { path = "../silicrew-wire" }
silicrew-skills = { path = "../silicrew-skills" }
silicrew-hands = { path = "../silicrew-hands" }
silicrew-extensions = { path = "../silicrew-extensions" }
silicrew-migrate = { path = "../silicrew-migrate" }
silicrew-control = { path = "../silicrew-control" }
silicrew-policy = { path = "../silicrew-policy" }
silicrew-journey = { path = "../silicrew-journey" }
silicrew-context = { path = "../silicrew-context" }
rusqlite = { workspace = true }
sqlx = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
tokio-stream = { workspace = true }
subtle = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
socket2 = { workspace = true }
reqwest = { workspace = true }
include_dir = "0.7"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
