[package]
name = "silicrew-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for the SiliCrew Agent OS"

[[bin]]
name = "silicrew"
path = "src/main.rs"

[dependencies]
silicrew-types = { path = "../silicrew-types" }
silicrew-kernel = { path = "../silicrew-kernel" }
silicrew-api = { path = "../silicrew-api" }
silicrew-migrate = { path = "../silicrew-migrate" }
silicrew-skills = { path = "../silicrew-skills" }
silicrew-extensions = { path = "../silicrew-extensions" }
zeroize = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
silicrew-runtime = { path = "../silicrew-runtime" }
uuid = { workspace = true }
ratatui = { workspace = true }
colored = { workspace = true }
