[package]
name = "silicrew-context"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context compilation traits for the OpenParlant control plane"

[dependencies]
silicrew-memory = { path = "../silicrew-memory" }
silicrew-types = { path = "../silicrew-types" }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
regex-lite = { workspace = true }
