[package]
name = "openparlant-control"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Turn control coordinator for the OpenParlant conversational control layer"

[dependencies]
openparlant-types = { path = "../openparlant-types" }
openparlant-policy = { path = "../openparlant-policy" }
openparlant-journey = { path = "../openparlant-journey" }
openparlant-context = { path = "../openparlant-context" }
openparlant-memory = { path = "../openparlant-memory" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
