[package]
name = "silicrew-control"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Turn control coordinator for the SiliCrew conversational control layer"

[dependencies]
silicrew-types = { path = "../silicrew-types" }
silicrew-policy = { path = "../silicrew-policy" }
silicrew-journey = { path = "../silicrew-journey" }
silicrew-context = { path = "../silicrew-context" }
silicrew-memory = { path = "../silicrew-memory" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
