[package]
name = "openparlant-journey"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Journey runtime traits for the OpenParlant control plane"

[dependencies]
openparlant-types = { path = "../openparlant-types" }
anyhow = { workspace = true }
async-trait = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
openparlant-memory = { path = "../openparlant-memory" }
tokio = { workspace = true }
