[package]
name = "silicrew-journey"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Journey runtime traits for the SiliCrew control plane"

[dependencies]
silicrew-memory = { path = "../silicrew-memory" }
silicrew-types = { path = "../silicrew-types" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
regex-lite = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
