[package]
name = "openparlant-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core kernel for the OpenParlant Agent OS"

[dependencies]
openparlant-types = { path = "../openparlant-types" }
openparlant-memory = { path = "../openparlant-memory" }
openparlant-runtime = { path = "../openparlant-runtime" }
openparlant-skills = { path = "../openparlant-skills" }
openparlant-hands = { path = "../openparlant-hands" }
openparlant-extensions = { path = "../openparlant-extensions" }
openparlant-wire = { path = "../openparlant-wire" }
openparlant-channels = { path = "../openparlant-channels" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
cron = "0.15"
zeroize = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
