[package]
name = "silicrew-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core kernel for the SiliCrew Agent OS"

[dependencies]
silicrew-types = { path = "../silicrew-types" }
silicrew-memory = { path = "../silicrew-memory" }
silicrew-runtime = { path = "../silicrew-runtime" }
silicrew-skills = { path = "../silicrew-skills" }
silicrew-hands = { path = "../silicrew-hands" }
silicrew-extensions = { path = "../silicrew-extensions" }
silicrew-wire = { path = "../silicrew-wire" }
silicrew-channels = { path = "../silicrew-channels" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
cron = "0.15"
zeroize = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
