[package]
name = "silicrew-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Policy matching and guideline resolution for the SiliCrew control plane"

[dependencies]
silicrew-memory = { path = "../silicrew-memory" }
silicrew-types = { path = "../silicrew-types" }
anyhow = { workspace = true }
async-trait = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
regex-lite = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
